@@ -241,6 +241,34 @@ name|cayenne
 operator|.
 name|map
 operator|.
+name|Procedure
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
+name|map
+operator|.
+name|ProcedureParameter
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
+name|map
+operator|.
 name|ProcedureQueryDescriptor
 import|;
 end_import
@@ -436,6 +464,38 @@ operator|.
 name|event
 operator|.
 name|EntityDisplayEvent
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
+name|modeler
+operator|.
+name|event
+operator|.
+name|ProcedureDisplayEvent
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
+name|modeler
+operator|.
+name|event
+operator|.
+name|ProcedureParameterDisplayEvent
 import|;
 end_import
 
@@ -839,6 +899,28 @@ argument_list|,
 literal|15
 argument_list|)
 expr_stmt|;
+name|PRIORITY_BY_TYPE
+operator|.
+name|put
+argument_list|(
+name|Procedure
+operator|.
+name|class
+argument_list|,
+literal|16
+argument_list|)
+expr_stmt|;
+name|PRIORITY_BY_TYPE
+operator|.
+name|put
+argument_list|(
+name|ProcedureParameter
+operator|.
+name|class
+argument_list|,
+literal|17
+argument_list|)
+expr_stmt|;
 block|}
 specifier|public
 specifier|static
@@ -1198,6 +1280,58 @@ name|domain
 argument_list|)
 expr_stmt|;
 block|}
+if|else if
+condition|(
+name|searchResultEntry
+operator|.
+name|getObject
+argument_list|()
+operator|instanceof
+name|Procedure
+condition|)
+block|{
+name|jumpToProcedureResult
+argument_list|(
+operator|(
+name|Procedure
+operator|)
+name|searchResultEntry
+operator|.
+name|getObject
+argument_list|()
+argument_list|,
+name|editor
+argument_list|,
+name|domain
+argument_list|)
+expr_stmt|;
+block|}
+if|else if
+condition|(
+name|searchResultEntry
+operator|.
+name|getObject
+argument_list|()
+operator|instanceof
+name|ProcedureParameter
+condition|)
+block|{
+name|jumpToProcedureResult
+argument_list|(
+operator|(
+name|ProcedureParameter
+operator|)
+name|searchResultEntry
+operator|.
+name|getObject
+argument_list|()
+argument_list|,
+name|editor
+argument_list|,
+name|domain
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 specifier|private
 name|List
@@ -1286,6 +1420,15 @@ name|dataMap
 argument_list|)
 expr_stmt|;
 name|searchInObjEntities
+argument_list|(
+name|pattern
+argument_list|,
+name|result
+argument_list|,
+name|dataMap
+argument_list|)
+expr_stmt|;
+name|searchInProcedures
 argument_list|(
 name|pattern
 argument_list|,
@@ -1817,6 +1960,115 @@ name|getSchema
 argument_list|()
 argument_list|)
 expr_stmt|;
+block|}
+block|}
+specifier|private
+name|void
+name|searchInProcedures
+parameter_list|(
+name|Pattern
+name|pattern
+parameter_list|,
+name|List
+argument_list|<
+name|SearchResultEntry
+argument_list|>
+name|result
+parameter_list|,
+name|DataMap
+name|dataMap
+parameter_list|)
+block|{
+for|for
+control|(
+name|Procedure
+name|proc
+range|:
+name|dataMap
+operator|.
+name|getProcedures
+argument_list|()
+control|)
+block|{
+if|if
+condition|(
+name|match
+argument_list|(
+name|proc
+operator|.
+name|getName
+argument_list|()
+argument_list|,
+name|pattern
+argument_list|)
+condition|)
+block|{
+name|result
+operator|.
+name|add
+argument_list|(
+operator|new
+name|SearchResultEntry
+argument_list|(
+name|proc
+argument_list|,
+name|proc
+operator|.
+name|getName
+argument_list|()
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+for|for
+control|(
+name|ProcedureParameter
+name|param
+range|:
+name|proc
+operator|.
+name|getCallParameters
+argument_list|()
+control|)
+block|{
+if|if
+condition|(
+name|match
+argument_list|(
+name|param
+operator|.
+name|getName
+argument_list|()
+argument_list|,
+name|pattern
+argument_list|)
+condition|)
+block|{
+name|result
+operator|.
+name|add
+argument_list|(
+operator|new
+name|SearchResultEntry
+argument_list|(
+name|param
+argument_list|,
+name|proc
+operator|.
+name|getName
+argument_list|()
+operator|+
+literal|'.'
+operator|+
+name|param
+operator|.
+name|getName
+argument_list|()
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+block|}
 block|}
 block|}
 specifier|private
@@ -2482,6 +2734,138 @@ name|event
 argument_list|)
 expr_stmt|;
 block|}
+block|}
+specifier|private
+specifier|static
+name|void
+name|jumpToProcedureResult
+parameter_list|(
+name|Procedure
+name|procedure
+parameter_list|,
+name|EditorView
+name|editor
+parameter_list|,
+name|DataChannelDescriptor
+name|domain
+parameter_list|)
+block|{
+name|DataMap
+name|map
+init|=
+name|procedure
+operator|.
+name|getDataMap
+argument_list|()
+decl_stmt|;
+name|buildAndSelectTreePath
+argument_list|(
+name|map
+argument_list|,
+name|procedure
+argument_list|,
+name|editor
+argument_list|)
+expr_stmt|;
+name|ProcedureDisplayEvent
+name|event
+init|=
+operator|new
+name|ProcedureDisplayEvent
+argument_list|(
+name|editor
+operator|.
+name|getProjectTreeView
+argument_list|()
+argument_list|,
+name|procedure
+argument_list|,
+name|map
+argument_list|,
+name|domain
+argument_list|)
+decl_stmt|;
+name|editor
+operator|.
+name|getProcedureView
+argument_list|()
+operator|.
+name|currentProcedureChanged
+argument_list|(
+name|event
+argument_list|)
+expr_stmt|;
+block|}
+specifier|private
+specifier|static
+name|void
+name|jumpToProcedureResult
+parameter_list|(
+name|ProcedureParameter
+name|parameter
+parameter_list|,
+name|EditorView
+name|editor
+parameter_list|,
+name|DataChannelDescriptor
+name|domain
+parameter_list|)
+block|{
+name|Procedure
+name|procedure
+init|=
+name|parameter
+operator|.
+name|getProcedure
+argument_list|()
+decl_stmt|;
+name|DataMap
+name|map
+init|=
+name|procedure
+operator|.
+name|getDataMap
+argument_list|()
+decl_stmt|;
+name|buildAndSelectTreePath
+argument_list|(
+name|map
+argument_list|,
+name|procedure
+argument_list|,
+name|editor
+argument_list|)
+expr_stmt|;
+name|ProcedureParameterDisplayEvent
+name|event
+init|=
+operator|new
+name|ProcedureParameterDisplayEvent
+argument_list|(
+name|editor
+operator|.
+name|getProjectTreeView
+argument_list|()
+argument_list|,
+name|parameter
+argument_list|,
+name|procedure
+argument_list|,
+name|map
+argument_list|,
+name|domain
+argument_list|)
+decl_stmt|;
+name|editor
+operator|.
+name|getProcedureView
+argument_list|()
+operator|.
+name|currentProcedureParameterChanged
+argument_list|(
+name|event
+argument_list|)
+expr_stmt|;
 block|}
 comment|/**      * Builds a tree path for a given path and make selection in it      */
 specifier|private
