@@ -371,24 +371,6 @@ name|apache
 operator|.
 name|cayenne
 operator|.
-name|swing
-operator|.
-name|components
-operator|.
-name|image
-operator|.
-name|FilteredIconFactory
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|cayenne
-operator|.
 name|util
 operator|.
 name|CayenneMapEntry
